--- a/View/FileSelect.xaml
+++ b/View/FileSelect.xaml
@@ -13,8 +13,9 @@
     </Grid.RowDefinitions>
     <TextBlock Text="ExFile Manager Application" HorizontalAlignment="Center" Margin="20,5,20,0"/>
     <TextBox HorizontalAlignment="Center" Height="40" Margin="30,35,0,0" TextWrapping="Wrap" 
-             Text="{Binding fileName}"
+             Text="{Binding fileName  , UpdateSourceTrigger=PropertyChanged}"
              VerticalAlignment="Top" Width="476" Name="FileNameTextBox" />
+
     <Button x:Name="BrowseButton" Content="Browse a file" HorizontalAlignment="Right"  Margin="485,35,10,0" 
     VerticalAlignment="Top" Width="121" Height="40"   Command="{Binding Path=UpdateCommand}"/>
    
@@ -22,8 +23,8 @@
         <ScrollViewer>
             <TextBlock 
                        HorizontalAlignment="Left" Margin="30,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Name="TextBlock1"
-                       Text="{Binding FileContent}"
-                    />
+                       Text="{Binding FileContent  , UpdateSourceTrigger=PropertyChanged}"
+                    /> 
         </ScrollViewer>
     </Grid>
         
