--- a/View/FileSelect.xaml
+++ b/View/FileSelect.xaml
@@ -1,35 +1,31 @@
 <Window x:Class="MVVM.View.FileSelect"
- xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
- xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
- xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  xmlns:vm="clr-namespace:MVVM.ViewModel"
-     
-   Title="MainWindow" Height="450" Width="800">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:MVVM.ViewModel" Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
         <vm:FileSelectViewModel x:Key="vmObj"/>
     </Window.Resources>
-   <Grid>
-    <Grid.RowDefinitions>
-        <RowDefinition Height="100"/>
-        <RowDefinition Height="*"/>
-    </Grid.RowDefinitions>
-    <TextBlock Text="ExFile Manager Application" HorizontalAlignment="Center" Margin="20,5,20,0"/>
-    <TextBox HorizontalAlignment="Center" Height="40" Margin="30,35,0,0" TextWrapping="Wrap" 
-          Text="{Binding FilesContent ,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
-             VerticalAlignment="Top" Width="476" Name="fileName" />
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="ExFile Manager Application" HorizontalAlignment="Center" Margin="20,5,20,0"/>
+        <TextBox HorizontalAlignment="Center" Height="40" Margin="30,35,0,0" TextWrapping="Wrap" 
+                    Text="{Binding FileContent ,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" VerticalAlignment="Top" 
+                    Width="476" Name="fileName" />
 
-    <Button x:Name="BrowseButton" Content="Browse a file" HorizontalAlignment="Right"  Margin="485,35,10,0" 
-    VerticalAlignment="Top" Width="121" Height="40"   Command="{Binding relayCommand, Source={StaticResource vmObj}}"/>
-   
-    <Grid Grid.Row="2">
-        <ScrollViewer>
-            <TextBlock 
-                       HorizontalAlignment="Left" Margin="30,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Name="fileContent"
-                    Text="{Binding FilesDetails.selectedFileContent,UpdateSourceTrigger=PropertyChanged}"
-                    /> 
-        </ScrollViewer>
+        <Button x:Name="BrowseButton" Content="Browse a file" HorizontalAlignment="Right" Margin="485,35,10,0" 
+                    VerticalAlignment="Top" Width="121" Height="40" Command="{Binding relayCommand}"/>
+
+        <Grid Grid.Row="2">
+            <ScrollViewer>
+                <TextBlock HorizontalAlignment="Left" Margin="30,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" 
+                            Name="fileContent" Text="{Binding FileDetails.SelectedFileContent,UpdateSourceTrigger=PropertyChanged}"/>
+            </ScrollViewer>
+        </Grid>
+
     </Grid>
-        
-</Grid>
 </Window>
