--- a/View/FileSelect.xaml
+++ b/View/FileSelect.xaml
@@ -3,9 +3,12 @@
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  
-    Style="{StaticResource RedStyle}" 
+  xmlns:vm="clr-namespace:MVVM.ViewModel"
+     
    Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <vm:FileSelectViewModel x:Key="vmObj"/>
+    </Window.Resources>
    <Grid>
     <Grid.RowDefinitions>
         <RowDefinition Height="100"/>
@@ -13,17 +16,17 @@
     </Grid.RowDefinitions>
     <TextBlock Text="ExFile Manager Application" HorizontalAlignment="Center" Margin="20,5,20,0"/>
     <TextBox HorizontalAlignment="Center" Height="40" Margin="30,35,0,0" TextWrapping="Wrap" 
-             
-             VerticalAlignment="Top" Width="476" Name="FileNameTextBox" />
+          Text="{Binding selectedFileName ,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
+             VerticalAlignment="Top" Width="476" Name="fileName" />
 
     <Button x:Name="BrowseButton" Content="Browse a file" HorizontalAlignment="Right"  Margin="485,35,10,0" 
-    VerticalAlignment="Top" Width="121" Height="40"   Command="{Binding Path=UpdateCommand}"/>
+    VerticalAlignment="Top" Width="121" Height="40"   Command="{Binding relayCommand, Source={StaticResource vmObj}}"/>
    
     <Grid Grid.Row="2">
         <ScrollViewer>
             <TextBlock 
-                       HorizontalAlignment="Left" Margin="30,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Name="TextBlock1"
-                    
+                       HorizontalAlignment="Left" Margin="30,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Name="fileContent"
+                    Text="{Binding selectedFileContent,UpdateSourceTrigger=PropertyChanged}"
                     /> 
         </ScrollViewer>
     </Grid>
