--- a/View/FileSelect.xaml
+++ b/View/FileSelect.xaml
@@ -16,11 +16,11 @@
     </Grid.RowDefinitions>
     <TextBlock Text="ExFile Manager Application" HorizontalAlignment="Center" Margin="20,5,20,0"/>
     <TextBox HorizontalAlignment="Center" Height="40" Margin="30,35,0,0" TextWrapping="Wrap" 
-          Text="{Binding FilesContent ,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
+          Text="{Binding FilesDetails.selectedFileName ,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
              VerticalAlignment="Top" Width="476" Name="fileName" />
 
     <Button x:Name="BrowseButton" Content="Browse a file" HorizontalAlignment="Right"  Margin="485,35,10,0" 
-    VerticalAlignment="Top" Width="121" Height="40"   Command="{Binding relayCommand, Source={StaticResource vmObj}}"/>
+    VerticalAlignment="Top" Width="121" Height="40"   Command="{Binding relayCommand}"/>
    
     <Grid Grid.Row="2">
         <ScrollViewer>
