--- a/View/FileSelect.xaml
+++ b/View/FileSelect.xaml
@@ -6,9 +6,7 @@
   xmlns:vm="clr-namespace:MVVM.ViewModel"
      
    Title="MainWindow" Height="450" Width="800">
-    <Window.Resources>
-        <vm:FileSelectViewModel x:Key="vmObj"/>
-    </Window.Resources>
+
    <Grid>
     <Grid.RowDefinitions>
         <RowDefinition Height="100"/>
@@ -16,17 +14,17 @@
     </Grid.RowDefinitions>
     <TextBlock Text="ExFile Manager Application" HorizontalAlignment="Center" Margin="20,5,20,0"/>
     <TextBox HorizontalAlignment="Center" Height="40" Margin="30,35,0,0" TextWrapping="Wrap" 
-          Text="{Binding FilesDetails.selectedFileName ,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
+          Text="{Binding FilesDetails.selectedFileName }"
              VerticalAlignment="Top" Width="476" Name="fileName" />
 
     <Button x:Name="BrowseButton" Content="Browse a file" HorizontalAlignment="Right"  Margin="485,35,10,0" 
-    VerticalAlignment="Top" Width="121" Height="40"   Command="{Binding relayCommand}"/>
+    VerticalAlignment="Top" Width="121" Height="40"   Command="{Binding OpenFileBtnClick}"/>
    
     <Grid Grid.Row="2">
         <ScrollViewer>
             <TextBlock 
                        HorizontalAlignment="Left" Margin="30,96,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Name="fileContent"
-                    Text="{Binding FilesDetails.selectedFileContent,UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding FilesDetails.selectedFileContent}"
                     /> 
         </ScrollViewer>
     </Grid>
