--- a/View/FileSelect.xaml
+++ b/View/FileSelect.xaml
@@ -7,9 +7,10 @@
      
    Title="MainWindow" Height="450" Width="800">
 
-   <Grid>
+   <!-- <Grid>
     <Grid.RowDefinitions>
         <RowDefinition Height="100"/>
+         <RowDefinition Height="100"/>
         <RowDefinition Height="*"/>
     </Grid.RowDefinitions>
    
@@ -28,6 +29,9 @@
 
     <Button  Content="Save as PDf" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="85" Margin="20,20,25,0"
      Command="{Binding SaveAsPDFBtn}"/>
+    
+     <Button  Content="Save as PDf" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="85"   Margin="20,60,35,0"/>
+    
     <Grid Grid.Row="2">
         <ScrollViewer>
             <TextBlock 
@@ -37,5 +41,45 @@
     </Grid>
      
         
-</Grid>
+</Grid> -->
+ <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="150"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="ExFile Manager Application" HorizontalAlignment="Center" Margin="20,5,20,0"/>
+        <TextBox HorizontalAlignment="Center" Height="40" Margin="30,35,0,0" TextWrapping="Wrap" 
+          Text="{Binding FilesDetails.SelectedFileName }"
+             VerticalAlignment="Top" Width="476" Name="fileName" />
+
+        <Button x:Name="BrowseButton" Content="Browse a file" HorizontalAlignment="Right"  Margin="485,35,10,0" 
+    VerticalAlignment="Top" Width="121" Height="40"   Command="{Binding OpenFileBtnClick}"/>
+
+
+        <Button  Content="Save as Text" HorizontalAlignment="Right" Height="20" Width="85" Margin="0,95,133,35"
+     Name="ToTextFile"  Command="{Binding SaveAsTextBtn}" RenderTransformOrigin="0.434,-1.247"/>
+
+
+        <Button  Content="Save as PDF" HorizontalAlignment="Right" Height="20" Width="85" Margin="0,95,28,35"
+     Command="{Binding SaveAsPDFBtn}"/>
+
+        <Button  Content="Upload File" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="26" Width="86"   Margin="0,0,70,0"
+        Command="{Binding UploadBtn}"/>
+
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="165*"/>
+                <ColumnDefinition Width="498*"/>
+                <ColumnDefinition Width="137*"/>
+            </Grid.ColumnDefinitions>
+            <ScrollViewer Grid.ColumnSpan="3">
+                <TextBlock 
+                       HorizontalAlignment="Left" Margin="30,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top"  x:Name="fileContent"
+                    Text="{Binding FilesDetails.SelectedFileContent}"/>
+            </ScrollViewer>
+        </Grid>
+
+
+    </Grid>
 </Window>
