--- a/View/FileSelect.xaml
+++ b/View/FileSelect.xaml
@@ -53,7 +53,7 @@
           Text="{Binding FilesDetails.SelectedFileName }"
              VerticalAlignment="Top" Width="476" Name="fileName" />
 
-        <Button x:Name="BrowseButton" Content="Browse a file" HorizontalAlignment="Right"  Margin="485,35,10,0" 
+        <Button x:Name="BrowseButton" Cursor="Hand" Content="Browse a file" HorizontalAlignment="Right"  Margin="485,35,10,0" 
     VerticalAlignment="Top" Width="121" Height="40"   Command="{Binding OpenFileBtnClick}"/>
 
 
@@ -66,6 +66,10 @@
 
         <Button  Content="Upload File" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="26" Width="86"   Margin="0,0,70,0"
         Command="{Binding UploadBtn}"/>
+        
+         <!-- <ProgressBar HorizontalAlignment="Left" Height="30" Margin="145,6,0,0" VerticalAlignment="Top" Width="469"   Value="{Binding progressBar1,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"   Grid.Row="1" />
+        <Label  HorizontalAlignment="Left" Margin="293,43,0,0" VerticalAlignment="Top"   Content="{Binding FilesDetails.progressBar1,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"   Height="32" 
+               Foreground="Black" FontSize="14" FontWeight="Normal" Grid.Row="1" /> -->
 
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
