--- a/View/UploadWindow.xaml
+++ b/View/UploadWindow.xaml
@@ -1,18 +1,17 @@
-﻿<Window
+﻿<Window x:Class="MVVMFileMange.View.UploadWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MVVMFileMange.View"
-        xmlns:Model="clr-namespace:MVVM.Model" x:Class="MVVMFileMange.View.SourceFolder"
-        mc:Ignorable="d"
+       mc:Ignorable="d"
           Height="560" AllowsTransparency="True" Width="810"  Background="White" WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen"
         Title="SourceFolder"   >
 
 
 
     <Grid>
-        <Grid.RowDefinitions>
+        <!--<Grid.RowDefinitions>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="40"/>
@@ -25,13 +24,13 @@
 
 
 
-        <!--<ListView Margin="21,21,-2,10" Name="lvDataBinding" Grid.ColumnSpan="3">
+        <ListView Margin="21,21,-2,10" Name="lvDataBinding" Grid.ColumnSpan="3">
                 <TextBlock  Margin="10,10,10,0" Background="Gray" Foreground="GREEN" FontSize="15" Width="780"  Height="33" Text="{Binding FilesDetails.SelectedFiles}"  />
                            
-            </ListView>-->
-        <!--<Grid Grid.Row="1"   >
+            </ListView>
+        <Grid Grid.Row="1"   >
             <ListBox ItemsSource="{Binding Path=FileData}"   SelectedItem="{Binding dr}"  Height="97" Width="700"  HorizontalAlignment="Left" Margin="52,30,0,0" Name="listBox1" VerticalAlignment="Top" DisplayMemberPath="DDFName" d:LayoutOverrides="VerticalAlignment" Background="Brown" />
-        </Grid>-->
+        </Grid>
         <Grid Grid.Row="1">
             <ListBox ItemsSource="{Binding Path=selected}" x:Name="listbox"   FontSize="15" Width="780" Margin="15,103,15,224" >
                 <ListBox.ItemTemplate>
@@ -44,17 +43,17 @@
                 </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
- 
-        <!--<so:SendOrderWidget Grid.Row="1"></so:SendOrderWidget>-->
-        <!--<Grid Grid.Row="1">
+
+        <so:SendOrderWidget Grid.Row="1"></so:SendOrderWidget>
+        <Grid Grid.Row="1">
             <ListView  ScrollViewer.HorizontalScrollBarVisibility="Disabled" Name="lvDataBinding">
                 <TextBlock  Margin="10,10,10,0" Background="Gray" Foreground="GREEN" FontSize="15" Width="780"  Height="33"  />
 
             </ListView>
-        </Grid>-->
-        <!--Text="{Binding selectedFiles[0], NotifyOnSourceUpdated=True}"-->
+        </Grid>
+        Text="{Binding selectedFiles[0], NotifyOnSourceUpdated=True}"
 
-        <Button  Content="Upload File" Margin="692,8,9,5" Grid.Row="2" Width="109" Background="Olive"   Command="{Binding UploadBtnClick}"/>
-      
+        <Button  Content="Upload File" Margin="692,8,9,5" Grid.Row="2" Width="109" Background="Olive"   Command="{Binding UploadBtnClick}"/>-->
+
     </Grid>
 </Window>
